<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" 
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="10dp">
    
    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:id="@+id/iFoto"
        android:src="@drawable/bolivar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/parque1"
            android:textColor="@color/black"
            android:id="@+id/tNombre"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/descrip"
            android:id="@+id/tDescrip"
            android:textColor="@color/blue"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/direccion"
            android:textAlignment="textEnd"
            android:textSize="15sp"
            android:id="@+id/tDirec"/>

    </LinearLayout>


</LinearLayout>